===============================================================================
Version 3.1.11
===============================================================================
New Features:
  - A few minor performance improvements.
    
Bug Fixes:
    
Deprecated:

Breaking Changes:
    
Other:
  - Changed the Math.hypot calls to Math.sqrt since the former is much
    slower.  It's slower due to the overflow/underflow handling, which dyn4j
    doesn't need.

===============================================================================
Version 3.1.10
===============================================================================
New Features:
  - Added a new update(double, int) method to the World class that will 
    execute any number of steps given the elapsed time.
  - Added get/set methods for the time accumulator on the World class.
    
Bug Fixes:
  - Fixed a bug in the WeldJoint class when using two fixed angular velocity
    bodies.
  - Fixed a NPE bug in the World.detect methods.
  - Fixed a bug in the EarClipping class where the decomposition would lead
    to a colinear vertex situation.
  - Fixed a bug in Bayazit class where it would select a closest vertex that
    was not visible by the current vertex.  Sadly, this has made it much
    slower.
    
Deprecated:

Breaking Changes:
    
Other:
  - Updated license dates.

===============================================================================
Version 3.1.9
===============================================================================
New Features:
  - Added a new interface, Triangulator, that both the EarClipping and
    SweepLine algorithms implement that allows you to get a triangulation of
    a simple polygon.
  - Added a bunch of new detect methods to the World class to allow filtering
    of sensor bodies, inactive bodies, or by a Filter object and some other
    features.
  - Added a new DetectListener interface specifically for the World.detect